Fix sizing and alignment issues on page template

--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -1,11 +1,13 @@
 .alignleft {
 	float: left;
 	margin-right: 16px;
+	clear: left;
 }
 
 .alignright {
 	float: right;
 	margin-left: 16px;
+	clear: right;
 }
 
 .aligncenter {
