--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -148,6 +148,10 @@ article.page {
 	padding: 0;
 }
 
+.page .entry-content {
+	padding: 8px 0 0 0;
+}
+
 /*
  * 404 page
  */
